@@ -1,1 +1,8 @@
 生成RSA证书（公钥私钥）
+
+--add-exports
+java.base/sun.security.rsa=ALL-UNNAMED
+--add-exports
+java.base/sun.security.util=ALL-UNNAMED
+--add-exports
+java.base/sun.security.x509=ALL-UNNAMED
